[package]
name = "cabinet"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "cabinet-simulation"
]

[workspace.dependencies]
tracing = "0.1.41"

toolbox = { git = "https://github.com/FDB-Cabinet/toolbox.git", default-features = false, features = ["fdb-740"] }


rand = { version = "0.9.1" }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "time"] }


[dependencies]
bincode = "2.0.1"
thiserror = { workspace = true }
tokio = { workspace = true }
toolbox = { workspace = true }
