[package]
name = "cabinet"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["cabinet-lib", "cabinet-protocol",
    "cabinet-simulation"
]

[workspace.dependencies]
tracing = "0.1.41"

toolbox = { path = "../fdb_version_switch/toolbox", default-features = false, features = ["fdb-740"] }
cabinet-lib = { path = "cabinet-lib" }
cabinet-protocol = { path = "cabinet-protocol" }

rand = { version = "0.9.1" }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "signal", "time"] }


[dependencies]
bincode = "2.0.1"
thiserror = { workspace = true }
tokio = { workspace = true }
toolbox = { workspace = true }
cabinet-lib = { workspace = true }
cabinet-protocol = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["tracing", "env-filter"] }
opentelemetry = { version = "0.20.0" }
opentelemetry-otlp = { version = "0.13.0", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.20.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.20.0"
reqwest = { version = "0.11.24", features = ["json"] }
clap = { version = "4.5.3", features = ["derive"] }
