[package]
name = "cabinet"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["cabinet-lib", "cabinet-protocol",
    "cabinet-simulation"
]

[workspace.dependencies]
tracing = "0.1.41"

toolbox = { path = "../fdb_version_switch/toolbox", default-features = false, features = ["fdb-740"] }
cabinet-lib = { path = "cabinet-lib" }
cabinet-protocol = { path = "cabinet-protocol" }

rand = { version = "0.9.1" }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "signal", "time"] }


[dependencies]
bincode = "2.0.1"
thiserror = { workspace = true }
tokio = { workspace = true }
toolbox = { workspace = true }
cabinet-lib = { workspace = true }
cabinet-protocol = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["tracing", "env-filter"] }
opentelemetry = { version = "0.30.0" }
opentelemetry-otlp = { version = "0.30.0", features = ["http-proto", "reqwest"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.31.0"
opentelemetry-semantic-conventions = "0.30.0"
clap = { version = "4.5.3", features = ["derive"] }
