[package]
name = "cabinet-simulation"
version = "0.1.0"
edition = "2024"

[lib]
name = "cabinet"
crate-type = ["cdylib"]

[dependencies]
foundationdb-simulation = { workspace = true }
foundationdb = { workspace = true }
thiserror = { workspace = true }
cabinet = { path = ".." }
rand = { workspace = true, features = ["alloc"] }
rand_chacha = "0.9.0"
base64 = "0.22.1"
async-trait = "0.1.88"
