[package]
name = "cabinet-simulation"
version = "0.1.0"
edition = "2024"

[lib]
name = "cabinet"
crate-type = ["cdylib"]

[dependencies]
toolbox = { workspace = true, features = ["simulation-740"] }
thiserror = { workspace = true }
cabinet-lib = { path = "../cabinet-lib" }
rand = { workspace = true, features = ["alloc"] }
rand_chacha = "0.9.0"
base64 = "0.22.1"
