[package]
name = "seed-seeker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive", "env"] }
colored_json = "5.0.0"
derive_builder = "0.20.2"
dotenv = "0.15.0"
flate2 = "1.1.2"
tar = "0.4.44"
jq-rs = "0.4.1"
jsonxf = "1.1.1"
rand = { workspace = true }
reqwest = { version = "0.12.22", features = ["multipart", "stream"] }
subprocess = "0.2.9"
tempfile = "3.20.0"
tokio = { workspace = true }
walkdir = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"