[package]
name = "seed-seeker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive", "env"] }
colored_json = "5.0.0"
derive_builder = "0.20.2"
dotenv = "0.15.0"
flate2 = "1.1.2"
tar = "0.4.44"
jq-rs = { version = "0.4.1", features = [] }
jsonxf = "1.1.1"
rand = { workspace = true }
reqwest = { version = "0.12.22", features = ["multipart", "stream", "blocking"] }
subprocess = "0.2.9"
tempfile = "3.20.0"
walkdir = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rayon = "1.10.0"